--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.22.0",
+    "@types/simple-oauth2": "^4.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simple-oauth2": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
